--- a/src/index.css
+++ b/src/index.css
@@ -65,6 +65,7 @@ a {
   color: inherit; /* Herda a cor do pai para evitar conflitos no menu */
   text-decoration: none;
   transition: color 0.2s;
+  font-size: 16px;
 }
 a:hover {
   color: var(--cor-primaria);
